# emoji_search

./: .gitignore  README.md  pyproject.toml
emoji_search/: main.py
