[tool.poetry]
name = "emoji-search"
version = "0.1.0"
description = ""
authors = ["Jacob Marks <jamarks13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
clip = {git = "https://github.com/openai/CLIP.git"}
scikit-learn = "^1.3.2"
appdirs = "^1.4.4"
torchvision = "^0.16.0"
tabulate = "^0.9.0"
sentence-transformers = "^2.2.2"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
emoji-search = "emoji_search.main:main"